[gd_scene load_steps=8 format=3 uid="uid://65inlkqkago4"]

[ext_resource type="Texture2D" uid="uid://deh02p1nn7or4" path="res://assets/textures/ui/ability_icons/DevBall.png" id="1_6bsxh"]
[ext_resource type="Script" uid="uid://ddxhsm8ypown" path="res://scripts/ui/elements/hud_ability.gd" id="1_ho8f7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ho8f7"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.14117648, 0.14117648, 0.14117648, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="Gradient" id="Gradient_6bsxh"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.3647059)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ho8f7"]
gradient = SubResource("Gradient_6bsxh")
width = 1

[sub_resource type="Gradient" id="Gradient_ho8f7"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 1, 0, 0.0627451)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6l8gm"]
gradient = SubResource("Gradient_ho8f7")
width = 1

[node name="Control" type="Control"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 3
anchors_preset = 0
offset_right = 243.0
offset_bottom = 64.0
script = ExtResource("1_ho8f7")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="AspectRatioContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ho8f7")

[node name="AbilityIcon" type="TextureRect" parent="AspectRatioContainer/PanelContainer"]
unique_name_in_owner = true
show_behind_parent = true
texture_filter = 6
texture_repeat = 1
layout_mode = 2
texture = ExtResource("1_6bsxh")
expand_mode = 3
stretch_mode = 5

[node name="CooldownBar" type="TextureProgressBar" parent="AspectRatioContainer/PanelContainer"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 2
step = 0.001
value = 93.0
fill_mode = 5
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_ho8f7")

[node name="CastingBar" type="TextureProgressBar" parent="AspectRatioContainer/PanelContainer"]
unique_name_in_owner = true
visible = false
show_behind_parent = true
layout_mode = 2
step = 0.001
value = 11.14
fill_mode = 5
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_6l8gm")

[node name="CooldownNumber" type="Label" parent="AspectRatioContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.59607846)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 12
text = "0.1s"
horizontal_alignment = 1
vertical_alignment = 1
